# grix

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
bench/: run.sh
src/: lib.rs  main.rs  mcp.rs  plan.rs  search.rs  store.rs  trigram.rs  varint.rs  watch.rs
src/index/: build.rs  format.rs
tests/: integration.rs
